Clean up client build settings