@@ -5,12 +5,13 @@ plugins {
     // Apply the java Plugin to add support for Java.
     id 'java'
     id 'application'
-    id("org.openjfx.javafxplugin") version "0.1.0"
 
     // Quality stuff
     id 'checkstyle'
     id "com.github.spotbugs" version "6.0.11"
     id "com.diffplug.spotless" version "6.25.0"
+
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 dependencies {
@@ -21,10 +22,6 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'typeracer.client.Client'
-
-    applicationDefaultJvmArgs = [
-            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web'
-    ]
 }
 
 repositories {
@@ -33,18 +30,10 @@ repositories {
 }
 
 dependencies {
-    implementation project(':communication')
-    implementation project(':game')
 
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testImplementation 'com.google.truth:truth:1.4.2'
-    implementation 'org.openjfx:javafx-controls:17.0.11'
-    implementation 'org.openjfx:javafx-fxml:17.0.11'
-    implementation 'org.openjfx:javafx-graphics:17.0.11'
-    implementation 'org.openjfx:javafx-base:17.0.11'
-    implementation 'org.openjfx:javafx-media:17.0.11'
-    implementation 'org.openjfx:javafx-web:17.0.11'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
@@ -73,9 +62,6 @@ tasks.withType(Javadoc) {
 tasks.named("test") {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
-    jvmArgs = [
-            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web'
-    ]
 }
 
 checkstyle {
